[gd_scene load_steps=2 format=3 uid="uid://ekey5yw2xry0"]

[ext_resource type="Script" uid="uid://1rm4pbtwl523" path="res://algorithms/randomness/blue_noise/BlueNoise.gd" id="1_blue_noise"]

[node name="BlueNoise" type="Node3D"]
script = ExtResource("1_blue_noise")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 12, 0)
light_energy = 1.2

[node name="NoisePoints" type="Node3D" parent="."]

[node name="VoronoiCells" type="Node3D" parent="."]

[node name="DistanceField" type="Node3D" parent="."]

[node name="MinDistance" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -3, 0)
visible = false
height = 1.0

[node name="IterationCount" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -3, 0)
visible = false
size = Vector3(0.8, 1, 0.4)
